Fix some text overflows for weird symbols

--- a/web/css/player.css
+++ b/web/css/player.css
@@ -83,6 +83,7 @@
     margin-left: 10px;
     white-space: pre-wrap;
     overflow-wrap: break-word;
+    overflow-y: hidden;
     background-color: rgba(var(--player_color_bg1), var(--player_opacity_bg1));
     opacity: 1;
     transition: visibility 0.3s, opacity 0.3s;
